--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "message-board-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://PhatingSanket.github.io/message-board-app",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -11,7 +10,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
     "underscore": "^1.13.1",
@@ -24,9 +23,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "json-server": "json-server --watch db.json --port 5000",
-    "dev": "concurrently \"npm start\" \"npm run json-server\"",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "dev": "\"npm start\" \"npm run json-server\""
   },
   "eslintConfig": {
     "extends": [
@@ -48,7 +45,6 @@
   },
   "devDependencies": {
     "concurrently": "^6.2.0",
-    "gh-pages": "^3.2.3",
     "json-server": "^0.16.3"
   }
 }
