--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
+    "deploy": "node --version",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
